Fix result section covering search box

--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -1,6 +1,6 @@
 .Loading {
-    margin-top: 100px;
-    margin-bottom: 100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .Loading .line {
@@ -23,6 +23,16 @@
   animation: loadingB 1.5s 0s infinite;
 }
 
+.load-3 .line:nth-last-child(1) {
+  animation: loadingC 0.6s 0.1s linear infinite;
+}
+.load-3 .line:nth-last-child(2) {
+  animation: loadingC 0.6s 0.2s linear infinite;
+}
+.load-3 .line:nth-last-child(3) {
+  animation: loadingC 0.6s 0.3s linear infinite;
+}
+
 @keyframes loadingB {
   0% {
     width: 15px;
@@ -32,5 +42,17 @@
   }
   100% {
     width: 15px;
+  }
+}
+
+@keyframes loadingC {
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
