--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,8 @@ body {
   color: var(--entwhite);
 
   overflow-x: hidden;
+
+  background-color: var(--entblack);
 }
 
 h1, h2, h3, h4, h5, h6{
